[package]
name = "containerspy"
authors = ["Hazel Atkinson <yellowsink@riseup.net>"]
version = "0.1.1-beta"
edition = "2021"
description = "A lightweight Docker OTLP stats exporter"
license-file = "LICENSE.md"
repository = "https://github.com/uwu/containerspy"
publish = false

[dependencies]
anyhow = "1.0.97"
bollard = "0.18.1"
confique = { version = "0.3.0", features = ["json5"] }
opentelemetry = { version = "0.29.1", features = ["metrics"] }
opentelemetry-otlp = { version = "0.29.0", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.29.0", features = ["metrics"] }
tokio = { version = "1.44.1", features = ["macros", "signal"] }
tokio-stream = "0.1.17"
tokio-util = "0.7.14"

[build-dependencies]
built = "0.7.7"